<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamminus1.udirtyrat.controllers.EnterNewSighting"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/TextLocationType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/location_type"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Spinner
        android:id="@+id/spinnerLocationType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TextLocationType"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp" />


    <TextView
        android:id="@+id/TextBorough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borough"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLocationType"
        android:layout_marginTop="5dp" />

    <Spinner
        android:id="@+id/spinnerBorough"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TextBorough"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/TextLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBorough"
        android:layout_marginTop="5dp" />


    <EditText
        android:id="@+id/editLatitude"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextLatitude"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/TextLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/longitude"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLatitude" />


    <EditText
        android:id="@+id/editLongitude"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextLongitude"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/textIncidentZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/incident_zip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLongitude" />

    <EditText
        android:id="@+id/editIncidentZip"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textIncidentZip"
        android:layout_marginTop="9dp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textIncidentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incident_address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIncidentZip"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/editIncidentAddress"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textIncidentAddress"
        android:layout_marginTop="1dp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textIncidentCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/city"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIncidentAddress" />

    <EditText
        android:id="@+id/editIncidentCity"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textIncidentCity"
        android:layout_marginTop="0dp"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/buttonSubmitSighting"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:text="@string/Submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIncidentCity"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/buttonCancelSighting"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="9dp"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmitSighting"
        android:layout_marginLeft="0dp" />




</android.support.constraint.ConstraintLayout>
